Bug 44140 - UI glitch introduced by new multi-line input-bar
Summary: UI glitch introduced by new multi-line input-bar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: Other All
: medium trivial
Assignee: Noel Power
URL:
Whiteboard: target:3.6.0 target:3.5.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-12-25 13:41 UTC by OfficeUser
Modified: 2012-04-01 22:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screen shot (16.12 KB, image/png)
2011-12-25 13:41 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2011-12-25 13:41:07 UTC
Created attachment 54814 [details]
screen shot

When placing the cursor (mouse left-click) in the new multi-line input-bar the red x-button and the green check-button jump some pixels up so that they are no longer inline with the fx-button.

I have attached a screen shot.
Comment 1 Rainer Bielefeld Retired 2012-01-02 10:01:04 UTC
[Reproducible] with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta2- WIN7 Home Premium (64bit) German UI [Build-ID : 8589e48-760cc4d-f39cf3d-1b2857e-60db978]. Effect is only visible if height of input line is increased.

@OfficeUser.
Your OS is?

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 2 OfficeUser 2012-01-02 10:16:05 UTC
Linux
Comment 3 OfficeUser 2012-01-21 00:12:31 UTC
Bug is still present in:
LibreOffice 3.5.0rc1 
Build-ID: b6c8ba5-8c0b455-0b5e650-d7f0dd3-b100c87
Comment 4 OfficeUser 2012-02-14 13:33:08 UTC
3.5.0 final is still affected by this bug.

I have set keyword regression since these buttons were not affected by such glitches before the introduction of the new multi-line input-bar.
Comment 5 Kohei Yoshida 2012-02-14 13:42:25 UTC
regression keyword is enough.  Let's not contaminate the title.
Comment 6 Markus Mohrhard 2012-03-26 07:09:02 UTC
I will look into that one.
Comment 7 Noel Power 2012-03-26 12:50:07 UTC
(In reply to comment #6)
> I will look into that one.

might even be better if I looked at that, anyway after a quick look it appears that although the hack in the toolbox ( to lock the vertical alignment of the toolbar icons ) is triggered, the height of those X and and check buttons are zeroed. The problem stems from the  ScInputWindow::SetOkCancelMode() & ScInputWindow::SetSumAssignMode()  methods which actually remove and then readd the toolbar items :-/ 
Don't know why removing/readding the items is necessary, if the images, tooltips etc were just changed then it should work fine. Alternatively maybe there is a way to force the 'Top' position of the items to the old position after readding.
Comment 8 Noel Power 2012-03-26 12:58:48 UTC
(In reply to comment #7)
> (In reply to comment #6)
> > I will look into that one.
> 
> Don't know why removing/readding the items is necessary,
bah, appears the toolbar doesn't redisplay the changed image, tooltips etc. looks like one has to delete and re-add
> Alternatively maybe there is a way to force the 'Top' position of the items to
> the old position after readding.
ok, I will look tomorrow to see if I can hack something for the above
Comment 9 Not Assigned 2012-03-27 04:40:50 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ae64e4b0c23f209410fe84df041c9445234df74

fix vertical align when switching mode in multibar fdo#44140
Comment 10 Not Assigned 2012-04-01 22:44:34 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05d6bb3aed80d0284bdeaf4177c9883aa60ea169&g=libreoffice-3-5

fix vertical align when switching mode in multibar fdo#44140


It will be available in LibreOffice 3.5.3.