fix vertical align when switching mode in multibar fdo#44140

switching between SumAssign & OkCancel mode in the multibar results in a slight 'jumping' of the toolbar items when end up out of allignment with the other toolbar items.